--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-#Pictures
-*.jpg
-*.png
-
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-.txt
-.idea/workspace.xml
+*.txt
